service-mesh/app/virtualservice-uday-app.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: uday-app-vs
  namespace: uday-app
spec:
  hosts:
    - "uday-app.uday.com.br"
  gateways:
    - uday-app-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: uday-app-service
            port:
              number: 80  # Essa porta deve bater com o "port" do Service acima
